2010-05-12  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-set-startup-visibility): Fix empty line display.

	* org-latex.el (org-export-latex-links): Use the formatting
	function of the link type, if it is available.

	* org-table.el (org-table-get-remote-range): Return to
	original buffer when retrieving remote reference.

	* org.el (org-display-inline-images): Do the entire buffer,
	not just the narrowed region.  Clear the cache.
	(org-display-inline-images): Match mode file paths.

2010-05-12  David Maus  <dmaus@ictsoc.de>

	* org-wl.el (org-wl-store-link-folder): Don't throw error when
	called on WL folder group.

2010-05-10  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-replace-escapes): Make sure the cdr is not nil.
	(org-read-date): Make `M-v' and `C-v' scroll the popup calendar.
	(org-mode): Revert comment syntax changes.

2010-05-09  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-sparse-tree): Make `C-c / t' search for all TODO
	keywords, and `C-c / T' for a specific one.

2010-05-08  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-mode): Fix comment syntax settings.

	* org-src.el (org-edit-src-allow-write-back-p): Define
	variable.

	* org.el (org-inline-image-overlays): New variable.
	(org-toggle-inline-images, org-display-inline-images)
	(org-remove-inline-images): New commands.
	(org-mode-map): Define a key for `org-toggle-inline-images'.

2010-05-08  David Maus  <dmaus@ictsoc.de>

	* org-wl.el (org-wl-message-field): New function.  Return
	content of header field in message entity.
	(org-wl-store-link): Call `org-wl-store-link-folder' or
	`org-wl-store-link-message' depending on major-mode.
	(org-wl-store-link-folder): New function.  Store link to
	Wanderlust folder.
	(org-wl-store-link-message): New function.  Store link to
	Wanderlust message.
	(org-wl-store-link-message): Store link to message while
	visiting message.
	(org-wl-open): Don't try to jump to message when opening a
	folder link.
